Updating versions, adding outbound validation
